basic workspace structure

--- a/src/MOD_1/Makefile
+++ b/src/MOD_1/Makefile
@@ -48,51 +48,57 @@
 # Run `make <target>` to execute a specific target.
 
 #example
-Target: dependencies
-	@echo "use dependencies to build target, dependencies can be other targets, like this:"
+# Target: dependencies
+# 	@echo "use dependencies to build target, dependencies can be other targets, like this:"
 
-dependencies: Target3
-	@echo "use Target3 to build Target2, Target3 can be another target, like this:"
+# dependencies: Target3
+# 	@echo "use Target3 to build Target2, Target3 can be another target, like this:"
 
-Target3:	
-#some command(but tabs before that)
-	@echo "gcc dummy use"
-	-gcc	
-# "-" means ignore errors, so the command will be executed even if there is an error
+# Target3:	
+# #some command(but tabs before that)
+# 	@echo "gcc dummy use"
+# 	-gcc	
+# # "-" means ignore errors, so the command will be executed even if there is an error
 
-#all target
-all: make_dir create_file
-	@echo "all done"
+# #all target
+# all: make_dir create_file
+# 	@echo "all done"
 
-#creating 3 directories d1, d2, d3:
-make_dir:
-	@echo "creating directories"
-	mkdir -p d1 d2 d3
-	@echo "done"
+# #creating 3 directories d1, d2, d3:
+# make_dir:
+# 	@echo "creating directories"
+# 	mkdir -p d1 d2 d3
+# 	@echo "done"
 
-#removing directories d1, d2, d3:
-remove_dir:
-	@echo "removing directories"
-	rm -rf d1 d2 d3
-	@echo "done"
+# #removing directories d1, d2, d3:
+# remove_dir:
+# 	@echo "removing directories"
+# 	rm -rf d1 d2 d3
+# 	@echo "done"
 
-#creating 3 files f1, f2, f3 in d1, d2, d3:
-create_file:
-	@echo "creating files"
-	touch d1/f1 d2/f2 d3/f3
-	@echo "done"
+# #creating 3 files f1, f2, f3 in d1, d2, d3:
+# create_file:
+# 	@echo "creating files"
+# 	touch d1/f1 d2/f2 d3/f3
+# 	@echo "done"
 
-#removing files f1, f2, f3 in d1, d2, d3:
-remove_file:
-	@echo "removing files"
-	rm -f d1/f1 d2/f2 d3/f3
-	@echo "done"
+# #removing files f1, f2, f3 in d1, d2, d3:
+# remove_file:
+# 	@echo "removing files"
+# 	rm -f d1/f1 d2/f2 d3/f3
+# 	@echo "done"
 
-#phony target example (unreal target)
-# will remove files and folders, make commands silent (doesn't show the command)
-clean:
-	@echo "removing files and directories"
-	rm -rf d1 d2 d3
-	@echo "done"
+# #phony target example (unreal target)
+# # will remove files and folders, make commands silent (doesn't show the command)
+# clean:
+# 	@echo "removing files and directories"
+# 	rm -rf d1 d2 d3
+# 	@echo "done"
 	
-.PHONY: clean #some other phony target, .PHONY can take multiple targets
+# .PHONY: clean #some other phony target, .PHONY can take multiple targets
+
+#default target
+default:
+	g++ main.cpp -o ../../bins/MOD_1
+	@echo "default target done"
+
